--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -117,7 +117,9 @@
                                 </td>
                                 <td style="width: 50%; background-color: #6c7479;">
                                     <!-- column 2 -->
-                                    <div><span class="paragraph-title">Architecture</span></div>
+                                    <div>
+                                        <span class="paragraph-title" style="display: inline-block;">Architecture</span>
+                                    </div>
                                     <div>
                                         <p>
                                             <ul>
@@ -145,7 +147,13 @@
                                                     </ul>
                                                 </li>
                                                 <li>unit testing: Microsoft TestFramework</li>
-                                                <li>site hosting:  <span class="textHighlight">Microsoft Azure Cloud Service</span></li>
+                                                <li>
+                                                    hosting:
+                                                    <ul>
+                                                        <li>webiste: <a href="http://darthclark.azurewebsites.net">Microsoft Azure Cloud Service</a></li>
+                                                        <li>repository: <a href="https://github.com/rclark4077">https://github.com/rclark4077</a></li>
+                                                    </ul>
+                                                </li>
                                             </ul>
                                         </p>
                                     </div>
