--- a/Resume/Views/Shared/_HeaderCompanies.cshtml
+++ b/Resume/Views/Shared/_HeaderCompanies.cshtml
@@ -9,7 +9,7 @@
         ViewBag.SelectedCompanyId = ViewBag.Id;
     }
 }
-<div class="company-list">
+@*<div class="company-list">*@
     <table id="tableRow" class="table table-striped table-dark table-bordered table-hover table-responsive-sm">
         <tbody>
             <tr>
@@ -98,5 +98,5 @@
             </tr>
         </tbody>
     </table>
-</div>
+@*</div>*@
 
