--- a/Resume/Views/Shared/_ResumeLayout.cshtml
+++ b/Resume/Views/Shared/_ResumeLayout.cshtml
@@ -73,9 +73,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-xl-12">
-                        <div><i id="flexIcon" class="material-icons md-20" title="Hide">toggle_on</i></div>
                         <div id="contentPanel">
-                            <div class="body">
+                            <div><i id="flexIcon" class="material-icons md-20" title="Hide">toggle_on</i></div>
+                            <div class="body"><br />
                                 @{
                                     Html.RenderAction(renderActionName, controllerName);
                                 }
