--- a/Resume/Content/accomplishments.css
+++ b/Resume/Content/accomplishments.css
@@ -1,15 +1,13 @@
 ﻿#accomplishmentContainer {
     position: absolute;
+    z-index: 100;
+    display: block;
     top: -1000px;
     margin: auto;
-    display: block;
-    z-index: 100;
     width: 60%;
     color: #333;
-    background-color: #fff;
-    opacity: .5;
+    background-color: #f0ffff;
     box-shadow: 0px 0px 20px 3px rgba(150,150,150, .5);
-    overflow: auto;
 }
 #accomplishmentContainer:hover {
     opacity: 1;
@@ -20,7 +18,6 @@
     display: block;
     text-align: center;
     font-size: 18px;
-    color: limegreen;
     margin: 15px 18px 5px 20px;
     background-color: #202020;
     border-radius: 5px;
@@ -40,6 +37,6 @@
 #accomplishments {
     top: 0px;
     font-size: 18px;
-    padding: 5px 50px 5px 50px;
+    padding: 5px 35px 5px 35px;
     word-wrap: break-word;
 }
