Added constructor dependency injection on CareerHistory

--- a/Resume/Views/CareerHistory/Index.cshtml
+++ b/Resume/Views/CareerHistory/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<Resume.ViewModels.CareerHistoryViewModel>
+﻿@model IEnumerable<Resume.ViewModels.CareerHistoryViewModel>
 @section jsVars{
     <script>
         const controller = "CareerHistory";
