--- a/Resume/Views/Shared/_ResumeLayout.cshtml
+++ b/Resume/Views/Shared/_ResumeLayout.cshtml
@@ -75,7 +75,8 @@
                     <div class="col col-xl-12">
                         <div id="contentPanel">
                             <div><i id="flexIcon" class="material-icons md-20" title="Hide">toggle_on</i></div>
-                            <div class="body"><br />
+                            <div class="body">
+                                <br />
                                 @{
                                     Html.RenderAction(renderActionName, controllerName);
                                 }
