--- a/Resume/Content/site.css
+++ b/Resume/Content/site.css
@@ -246,6 +246,8 @@ a:hover {
     font-size: 14px;
     color: white;
     background-color: red;
+    padding: 3px 5px 3px 5px;
+    border-radius: 3px;
 }
 .zoom-text {
     cursor: pointer;
