--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -110,7 +110,7 @@
                                     </div>
                                     <div>
                                         <p>This site was built from the ground up with very little 3rd party framework involvement. This was intentional to illustrate my full-stack programming capabilities without the need for frameworks like angular or jquery.</p>
-                                        <p>The only framework that was used is <span class="text-Highlight">Bootstrap 4</span>.  This came with one other JS add-on for Bootstrap called <span class="text-Highlight">Popcorn</span>.  This operates when the side-menu is compressed and thus the descriptions for the navigation are hidden.  All animations, sliders, zooms, form-actions, page updates...etc were built using pure javascript in concert with CSS3 and MVC Request/Response handlers</p>
+                                        <p>The only frameworks that were used are <span class="text-Highlight">Unity MVC5</span> and <span class="text-Highlight">Bootstrap 4</span>.  This came with one other JS add-on for Bootstrap called <span class="text-Highlight">Popcorn</span>.  This operates when the side-menu is compressed and thus the descriptions for the navigation are hidden.  All animations, sliders, zooms, form-actions, page updates...etc were built using pure javascript in concert with CSS3 and MVC Request/Response handlers</p>
                                         <p>Also, <span class="text-Highlight">please note</span> that this MVC application is only built for Microsoft Edge, Firefox, Firefox Developer & Google Chrome</p>
                                         <p>You can download this entire site's code for further code analysis. This includes all aspects of the database operations to create, insert, and manipulate database & tables using the download navigation links</p>
                                     </div>
@@ -133,17 +133,13 @@
                                     <div>
                                         <p>
                                             <ul>
-                                                <li>design patterns: 
+                                                <li>design patterns:
                                                     <ul>
-                                                        <li>primary design patterns:
-                                                            <ul>
-                                                                <li>Model-View-Controller: <span class="text-Highlight">(MVC)</span></li>
-                                                                <li>Model-View-View-Model: <span class="text-Highlight">(MVVM)</span></li>
-                                                                <li>Constructors <span class="text-Highlight">dependency injections</span></li>
-                                                            </ul>
-                                                        </li>
+                                                        <li>Model-View-Controller: <span class="text-Highlight">(MVC)</span></li>
+                                                        <li>Model-View-View-Model: <span class="text-Highlight">(MVVM)</span></li>
+                                                        <li>Constructors <span class="text-Highlight">dependency injections</span></li>
                                                     </ul>
-                                                </li>                                                
+                                                </li><br />
                                                 <li>Total of 4 projects in 1 solution: <span class="text-Highlight">enhanced separation of concerns</span>
                                                     <ul>
                                                         <li>web layer: MVC routing, controllers & views (oh my)</li>
@@ -151,7 +147,7 @@
                                                         <li>data access layer: <span class="text-Highlight">entity framework 6</span> edmx, interfaces, repositories</li>
                                                         <li>service layer: defines dependency injection objects</li>
                                                     </ul>
-                                                </li>
+                                                </li><br />
                                                 <li>
                                                     frontend:
                                                     <ul>
@@ -159,20 +155,20 @@
                                                         <li>other API: Popcorn (tooltip)</li>
                                                         <li>front-end langauges: html 5, css 3, (pure/higher order) javascript</li>
                                                     </ul>
-                                                </li>
+                                                </li><br />
                                                 <li>
                                                     backend:
                                                     <ul>
                                                         <li>asp.net (framework 4.5)</li>
                                                         <li>languages: c# and razor</li>
-                                                    </ul>
+                                                    </ul><br />
                                                 <li>
                                                     data layer:
                                                     <ul>
                                                         <li>entity framework 6: <span class="text-Highlight">ado.net entity data model</span></li>
                                                         <li>database: MSSQL 2014 TSQL (local development)</li>
                                                         <li><span class="text-Highlight">database hosted (live): Azure SQL cloud hosting</span></li>
-                                                    </ul>
+                                                    </ul><br />
                                                 </li>
                                                 <li>unit testing: Microsoft TestFramework</li>
                                                 <li>
