--- a/Resume/Views/Projects/Index.cshtml
+++ b/Resume/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.Models.Project>
+﻿@model IEnumerable<Resume.DAL.Models.Project>
 @section jsVars{
     <script>
         const controller = "Projects";
