--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -104,15 +104,18 @@
                             <tr>
                                 <td style="width: 50%;">
                                     <!-- column 1-->
-                                    <div><span class="paragraph-title">About this site</span><br /><br /></div>
                                     <div>
-                                        <p>Thank you for visiting my resume` web application.  This site was built for your benefit to experience a bit of my code design and engineering capabilities. The programming techniques used to build this site are described in the right panel: <span data-noevent="true" class="paragraph-title" style="padding: 2px;">Architecture</span></p>
+                                        <span class="paragraph-title">About this site</span>
+                                    </div>
+                                    <div><br />
+                                        <p>Thank you for visiting my resume` web application.  This site was built for your benefit to experience a bit of my code design and engineering capabilities. The programming techniques used to build this site are described in the right panel: <span data-noevent="true" class="paragraph-title" style="padding: 4px;">Architecture</span></p>
                                     </div>
                                     <div>
                                         <p>This site was built from the ground up with very little 3rd party framework involvement. This was intentional to illustrate my full-stack programming capabilities without the need for frameworks like angular or jquery.</p>
-                                        <p>The only frameworks that were used are <span class="text-Highlight">Unity MVC5</span> and <span class="text-Highlight">Bootstrap 4</span>.  This came with one other JS add-on for Bootstrap called <span class="text-Highlight">Popcorn</span>.  This operates when the side-menu is compressed and thus the descriptions for the navigation are hidden.  All animations, sliders, zooms, form-actions, page updates...etc were built using pure javascript in concert with CSS3 and MVC Request/Response handlers</p>
-                                        <p>Also, <span class="text-Highlight">please note</span> that this MVC application is only built for Microsoft Edge, Firefox, Firefox Developer & Google Chrome</p>
-                                        <p>You can download this entire site's code for further code analysis. This includes all aspects of the database operations to create, insert, and manipulate database & tables using the download navigation links</p>
+                                        <p>The only frameworks that were used are <span class="text-Highlight">Unity MVC5</span> (used for dependency injections and repository definition) and <span class="text-Highlight">Bootstrap 4</span> (used here primaarily for html containment organization) .  This came with one other JS add-on for Bootstrap called <span class="text-Highlight">Popcorn</span>.  Popcorn operates when the side-menu is compressed and thus the descriptions for the navigation are hidden.  All animations, sliders, zooms, form-actions, page updates...etc were built using pure javascript in concert with CSS3 and MVC Request/Response handlers</p>
+                                        <p>As for the MVC base design pattern used, I chose to also include a derivative called Model-View-View-Model (aka MVVM) design approach for a more defined separation of concerns mainly from the UI and the business-logic layer</p>
+                                        <p>Also, <span class="text-Highlight">please note</span>, at this time, this ASP.Net MVC application is only built for Microsoft Edge, Firefox, Firefox Developer & Google Chrome</p>
+                                        <p>You can download this entire site's code for further code analysis. This includes all aspects of the database operations to create, read, and manipulate database & tables using the <span data-noevent="true" class="paragraph-title" style="padding: 4px;"><a href="/Downloads/Index/1" style="color: #333;">downloads</a></span> navigation links</p>
                                     </div>
 
                                     <div>
@@ -128,7 +131,7 @@
                                 <td style="width: 50%; background-color: #6c7479;">
                                     <!-- column 2 -->
                                     <div>
-                                        <span class="paragraph-title" style="display: inline-block;">Architecture</span>
+                                        <span class="paragraph-title">Architecture</span>
                                     </div>
                                     <div>
                                         <p>
@@ -142,8 +145,8 @@
                                                 </li><br />
                                                 <li>Total of 4 projects in 1 solution: <span class="text-Highlight">enhanced separation of concerns</span>
                                                     <ul>
-                                                        <li>web layer: MVC routing, controllers & views (oh my)</li>
-                                                        <li>dependency injection framework: <span class="text-Highlight">Unity MVC 5</span></li>
+                                                        <li>web layer: MVC routing, controllers & views</li>
+                                                        <li>view models layer: to employ MVVM design pattern</li>
                                                         <li>data access layer: <span class="text-Highlight">entity framework 6</span> edmx, interfaces, repositories</li>
                                                         <li>service layer: defines dependency injection objects</li>
                                                     </ul>
@@ -159,6 +162,7 @@
                                                 <li>
                                                     backend:
                                                     <ul>
+                                                        <li><span class="text-Highlight">unity mvc 5</span></li>
                                                         <li>asp.net (framework 4.5)</li>
                                                         <li>languages: c# and razor</li>
                                                     </ul><br />
@@ -167,13 +171,13 @@
                                                     <ul>
                                                         <li>entity framework 6: <span class="text-Highlight">ado.net entity data model</span></li>
                                                         <li>database: MSSQL 2014 TSQL (local development)</li>
-                                                        <li><span class="text-Highlight">database hosted (live): Azure SQL cloud hosting</span></li>
                                                     </ul><br />
                                                 </li>
                                                 <li>unit testing: Microsoft TestFramework</li>
                                                 <li>
                                                     hosting services:
                                                     <ul>
+                                                        <li>database (live): <span class="paragraph-title-click">Azure SQL cloud hosting</span></li>
                                                         <li>website: <span class="paragraph-title-click"><a href="http://darthclark.azurewebsites.net">Microsoft Azure Cloud Service</a></span></li>
                                                         <li>source control: <span class="paragraph-title-click"><a href="https://github.com/rclark4077/Resume">GitHub</a></span></li>
                                                     </ul>
