Minor adjustments to proof-reading web content

--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -220,7 +220,7 @@
                                 <td>
                                     <div><span class="paragraph-title">See Also...</span></div>
                                     <div>
-                                        <p>Please check out the qualifications and projects sections of this website that briefly describe my technical and personal capabilities and experience</p>
+                                        <p>Please check out the <span data-noevent="true" class="paragraph-title" style="padding: 4px;"><a href="/Qualifications/Index/1" style="color: #333;">qualifications</a></span> and <span data-noevent="true" class="paragraph-title" style="padding: 4px;"><a href="/Projects/Index/1" style="color: #333;">projects</a></span> sections of this website that briefly describe my technical and personal capabilities and experience</p>
                                     </div>
                                 </td>
                             </tr>
