changed ViewModels class library to ViewModel (singular).  caused by assembly not removing original location, thus having 2 references when only 1 exists

--- a/Resume/Views/CareerHistory/Index.cshtml
+++ b/Resume/Views/CareerHistory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.ViewModels.CareerHistoryViewModel>
+﻿@model IEnumerable<Resume.ViewModel.CareerHistoryViewModel>
 @section jsVars{
     <script>
         const controller = "CareerHistory";
