--- a/Resume/Views/Qualifications/Index.cshtml
+++ b/Resume/Views/Qualifications/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<Resume.ViewModels.QualificationViewModel>
+@model IEnumerable<Resume.ViewModel.QualificationViewModel>
 
 @section jsVars{
     <script>
