--- a/Resume/Views/Shared/_HeaderCareerHistoryCompanies.cshtml
+++ b/Resume/Views/Shared/_HeaderCareerHistoryCompanies.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.ViewModels.AccomplishmentsViewModel>
+﻿@model IEnumerable<Resume.ViewModel.AccomplishmentsViewModel>
 @{
     ViewBag.SelectedCompanyId = Request.QueryString["LastSelectedParam"];
 
