--- a/Resume/Views/Shared/_HeaderCompanies.cshtml
+++ b/Resume/Views/Shared/_HeaderCompanies.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.ViewModels.CompaniesAndAccomplishmentsViewModel>
+﻿@model IEnumerable<Resume.ViewModel.CompaniesAndAccomplishmentsViewModel>
 
 @{
     ViewBag.SelectedCompanyId = Request.QueryString["LastSelectedParam"];
