--- a/Resume/Views/Shared/_HeaderDownloads.cshtml
+++ b/Resume/Views/Shared/_HeaderDownloads.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.ViewModels.SubmoduleViewModel>
+﻿@model IEnumerable<Resume.ViewModel.SubmoduleViewModel>
 
 
 @section jsVars{
