--- a/Resume/Views/Shared/_HeaderEducation.cshtml
+++ b/Resume/Views/Shared/_HeaderEducation.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Resume.ViewModels.PriorEducationViewModel>
+﻿@model IEnumerable<Resume.ViewModel.PriorEducationViewModel>
 
     <div class="educationList" style="width: 100%;">
         <table id="tableRow" class="table table-striped table-dark table-bordered table-hover table-responsive-sm" style="width: 100%;">
