--- a/Resume/Views/Shared/_ResumeLayout.cshtml
+++ b/Resume/Views/Shared/_ResumeLayout.cshtml
@@ -44,7 +44,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Grid Layout - complex</title>
+    <title>Welcome to the resume` site of randy clark</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
