--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -12,15 +12,9 @@
         <thead>
             <tr>
                 <th>
-                    <h1>
-                        <span id="welcomeString">C:\></span>
-                        <span></span><br />
-                    </h1>
-                    <div></div><br />
+                    <h1 id="welcomeString">C:\></h1>
                 </th>
-                <th>
-                    <div>"...Looking forward to my next challenging opportunity in the areas of web, software & database engineering"</div><br />
-                </th>
+                <th>"...Looking forward to my next challenging opportunity in the areas of web, software & database engineering"</th>
                 <th>
                     <div class="container">
                         @foreach (dynamic item in Model.SocialNetworkProfiles)
@@ -122,10 +116,10 @@
                                         <p><span style="color: #00ffb4; font-size: 20px;">***</span> The data layer controlled by the "edmx" entity data models also controls this site's navigational menu system, made up of "Modules" and "Submodules"</p>
                                         <p>You'll find the Module and Submodule tables in the database</p>
                                     </div>
-                                    <div>Thank you for visiting!<br /><br />
-                                        <span class="text-Highlight-mint">
-                                            Randy Clark
-                                        </span>
+                                    <div ><br />
+                                         <span class="text-Highlight-mint">
+                                             Thank you for visiting
+                                         </span>
                                     </div>
                                 </td>
                                 <td style="width: 50%; background-color: #6c7479;">
@@ -136,50 +130,52 @@
                                     <div>
                                         <p>
                                             <ul>
-                                                <li>design patterns:
+                                                <li><br />
+                                                    <span class="text-Highlight">design patterns</span>
                                                     <ul>
-                                                        <li>Model-View-Controller: <span class="text-Highlight">(MVC)</span></li>
-                                                        <li>Model-View-View-Model: <span class="text-Highlight">(MVVM)</span></li>
-                                                        <li>Constructors <span class="text-Highlight">dependency injections</span></li>
+                                                        <li>Model-View-Controller: (MVC)</li>
+                                                        <li>Model-View-View-Model: (MVVM)</li>
+                                                        <li>Constructors Dependency Injections<br /><br /></li>
                                                     </ul>
-                                                </li><br />
-                                                <li>Total of 4 projects in 1 solution: <span class="text-Highlight">enhanced separation of concerns</span>
-                                                    <ul>
-                                                        <li>web layer: MVC routing, controllers & views</li>
-                                                        <li>view models layer: to employ MVVM design pattern</li>
-                                                        <li>data access layer: <span class="text-Highlight">entity framework 6</span> edmx, interfaces, repositories</li>
-                                                        <li>service layer: defines dependency injection objects</li>
-                                                    </ul>
-                                                </li><br />
+                                                </li>
                                                 <li>
-                                                    frontend:
+                                                    <span class="text-Highlight">frontend</span>
                                                     <ul>
-                                                        <li>frameworks: <span class="text-Highlight">bootstrap 4</span></li>
+                                                        <li>frameworks: bootstrap 4</li>
                                                         <li>other API: Popcorn (tooltip)</li>
-                                                        <li>front-end langauges: html 5, css 3, (pure/higher order) javascript</li>
+                                                        <li>front-end langauges: html 5, css 3, (pure/higher order) javascript<br /><br /></li>
                                                     </ul>
-                                                </li><br />
+                                                </li>
                                                 <li>
-                                                    backend:
+                                                    <span class="text-Highlight">backend</span>
                                                     <ul>
-                                                        <li><span class="text-Highlight">unity mvc 5</span></li>
+                                                        <li>unity mvc 5</li>
                                                         <li>asp.net (framework 4.5)</li>
                                                         <li>languages: c# and razor</li>
                                                     </ul><br />
                                                 <li>
-                                                    data layer:
+                                                    <span class="text-Highlight">data layer</span>
                                                     <ul>
-                                                        <li>entity framework 6: <span class="text-Highlight">ado.net entity data model</span></li>
-                                                        <li>database: MSSQL 2014 TSQL (local development)</li>
-                                                    </ul><br />
+                                                        <li>entity framework 6: ado.net entity data model</li>
+                                                        <li>database: MSSQL 2014 TSQL (for local development)<br /><br /></li>
+                                                    </ul>
                                                 </li>
-                                                <li>unit testing: Microsoft TestFramework</li>
                                                 <li>
-                                                    hosting services:
+                                                    <span class="text-Highlight">enhanced separation of concerns</span>
                                                     <ul>
-                                                        <li>database (live): <span class="paragraph-title-click">Azure SQL cloud hosting</span></li>
-                                                        <li>website: <span class="paragraph-title-click"><a href="http://darthclark.azurewebsites.net">Microsoft Azure Cloud Service</a></span></li>
-                                                        <li>source control: <span class="paragraph-title-click"><a href="https://github.com/rclark4077/Resume">GitHub</a></span></li>
+                                                        <li>web layer: MVC routing, controllers & views</li>
+                                                        <li>view models layer: to employ MVVM design pattern</li>
+                                                        <li>data access layer: entity framework 6 edmx, interfaces, repositories</li>
+                                                        <li>service layer: defines dependency injection objects<br /><br /></li>
+                                                    </ul>
+                                                </li>
+                                                <li><span class="text-Highlight">unit testing</span> Microsoft TestFramework<br /><br /></li>
+                                                <li>
+                                                    <span class="text-Highlight">hosting services</span>
+                                                    <ul>
+                                                        <li>database (live): Azure SQL cloud hosting</li>
+                                                        <li>website: <a href="http://darthclark.azurewebsites.net">Microsoft Azure Cloud Service</a></li>
+                                                        <li>source control: <span data-noevent="true" class="paragraph-title" style="padding: 4px;"><a href="https://github.com/rclark4077/Resume" style="color: #333;">GitHub</a></span></li>
                                                     </ul>
                                                 </li>
                                             </ul>
